feat(emprunt): ajout de la gestion des emprunts avec pagination et exceptions personnalisées